fix: review fixes from superpowers-dev-flow
- Add GlobalExceptionHandler for centralized error handling
- Fix InMemoryDao implementations to use immutable patterns
- Add missing fields to RoleVO and UserVO